# pacman-ai

./: README.md  pyproject.toml
src/pacman_ai/: __init__.py  ghosts.py  main.py  map.py  pacman.py
